--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+uritemplate (3.0.0-1) bionic; urgency=medium
+
+  * New upstream release, renamed to uritemplate after the two projects merged
+
+ -- Dennis Kaarsemaker <dennis@kaarsemaker.net>  Sun, 15 Apr 2018 19:57:40 +0200
+
 uritemplate.py (0.3.0-1) Saucy; urgency=low
 
   * New upstream release
