--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+uritemplate (3.0.0-2) bionic; urgency=medium
+
+  * Package now requires setuptools
+
+ -- Dennis Kaarsemaker <dennis@kaarsemaker.net>  Sun, 15 Apr 2018 21:04:11 +0200
+
 uritemplate (3.0.0-1) bionic; urgency=medium
 
   * New upstream release, renamed to uritemplate after the two projects merged
